# delivr

./: .env  .gitignore  Cargo.toml
.github/workflows/: general.yml
configuration/: base.yaml  production.yaml
migrations/: 20240603051159_create_tokens.sql
scripts/: init_db.sh
src/: config.rs  error.rs  lib.rs  main.rs
src/app/: mod.rs
src/database/: mod.rs  tokens.rs
src/routes/: mod.rs
src/utils/: mod.rs
src/zoho/: client.rs  error.rs  invoice.rs  mod.rs  query.rs  token.rs
static/: index.html
static/assets/: script.js  styles.css
tests/: invoice_response.txt
tests/server/: error.rs  health.rs  helpers.rs
