[package]
name = "delivr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["tracing"] }
tokio = { version = "1.0", features = ["full"] }
config = { git = "https://github.com/mehcode/config-rs.git", default-features = false, features = ["yaml"] }
derive_more = { version = "0.99.17", features = ["from"] }
serde = { version = "1", features = ["derive"]}
serde_json = "1"
serde-aux = "4"
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json"] }

# database
sqlx = { version = "0.7", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "bigdecimal",
    "migrate",
] }
bigdecimal = { version = "0.3.1", features = ["serde"] }
chrono = { version = "0.4.24", features = ["serde"] }
secrecy = { version = "0.8", features = ["serde"] }

# logging
tower-http = { version = "0.5.0", features = ["trace", "cors"] }
log = "0.4"
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-log = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
ansi_term = "0.12"

[dev-dependencies]
tokio = "1"
reqwest = { version = "0.11", features = ["json"] }

